# Pyfinity

./: .env.example  .gitignore  API_ANALYSIS.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  TODO_IMPLEMENTATION_EXAMPLES.md  pyproject.toml  requirements.txt  test_526_diagnostic.py  test_526_fix.py  test_advanced_shard_stats.py  test_bot_integration.py  test_discord_bot.py  test_pyfinity.py  test_rate_limits.py  test_real_bot.py  verify_fix.py
assets/: README.md
examples/: advanced_shard_statistics.py  async_example.py  discord_bot_integration.py  multi_framework_integration.py  nextcord_integration.py  sync_example.py  universal_compatibility_demo.py
src/pyfinity/: __init__.py  client.py
tests/: __init__.py  test_client.py  test_main.py
